force-app/main/default/objects/Voo__c/fields/Aeroporto_Chegada__c.field-meta.xml
<CustomField>
    <fullName>Aeroporto_Chegada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aeroporto de Chegada</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Aeroporto de Chegada</relationshipLabel>
    <relationshipName>Aeroporto_Chegada</relationshipName>
    <type>Lookup</type>
</CustomField>