force-app/main/default/objects/Voo__c/fields/Aeroporto_Partida__c.field-meta.xml
<CustomField>
    <fullName>Aeroporto_Partida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aeroporto de Partida</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Aeroporto de Partida</relationshipLabel>
    <relationshipName>Aeroporto_Partida</relationshipName>
    <type>Lookup</type>
</CustomField>