force-app/main/default/objects/Voo__c/fields/AeroportoDestino__c.field-meta.xml
<CustomField>
    <fullName>AeroportoDestino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aeroporto de Destino</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Voos (Destino)</relationshipLabel>
    <relationshipName>Voos_Destino</relationshipName>
    <type>Lookup</type>
</CustomField>