force-app/main/default/objects/Voo__c/fields/AeroportoOrigem__c.field-meta.xml
<CustomField>
    <fullName>AeroportoOrigem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aeroporto de Origem</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Voos (Origem)</relationshipLabel>
    <relationshipName>Voos_Origem</relationshipName>
    <type>Lookup</type>
</CustomField>