force-app/main/default/objects/Voo__c/fields/Data_de_Chegada__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Chegada__c</fullName>
    <label>Data de Chegada</label>
    <type>Date</type>
</CustomField>