force-app/main/default/objects/Voo__c/fields/Data_de_Partida__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Partida__c</fullName>
    <label>Data de Partida</label>
    <type>Date</type>
</CustomField>