force-app/main/default/objects/Voo__c/fields/Hora_de_Chegada__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_Chegada__c</fullName>
    <label>Hora de Chegada</label>
    <type>Time</type>
</CustomField>