force-app/main/default/objects/Voo__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>